Fixed text alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,9 +26,9 @@ h1 {
 .main-title {
   position: absolute;
 	padding-top: 30%;
-  width: 300px;
+  width: 400px;
 	left: 50%;
-  margin-left: -150px;
+  margin-left: -200px;
   text-align: center;
 	color: white;
 }
